[package]
name = "playground"
version = "0.1.0"
authors = ["Philippe Normand <philn@igalia.com>"]

[lib]
name = "playground"
path = "src/lib.rs"

[dependencies]
glib = { version = "0.3.0", git = "https://github.com/gtk-rs/glib" }
gstreamer = { version="0.1.0", git="https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-app = { version="0.1.0", git="https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-player = { version="0.1.0", git="https://github.com/sdroege/gstreamer-rs.git" }

[[bin]]
name = "test-player"

